config junit